Cache source code patches storage and retrieval